@@ -15,6 +15,7 @@
  */
 package com.google.cloud.teleport.v2.neo4j.database;
 
+import com.google.cloud.teleport.v2.neo4j.model.enums.EdgeNodesMatchMode;
 import com.google.cloud.teleport.v2.neo4j.model.enums.FragmentType;
 import com.google.cloud.teleport.v2.neo4j.model.enums.RoleType;
 import com.google.cloud.teleport.v2.neo4j.model.enums.SaveMode;
@@ -27,8 +28,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import org.apache.commons.lang3.StringUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 /**
  * Generates cypher based on model metadata.
@@ -36,105 +35,127 @@ import org.slf4j.LoggerFactory;
  * <p>TODO: Needs to be refactored to use DSL.
  */
 public class CypherGenerator {
-
-  private static final Logger LOG = LoggerFactory.getLogger(CypherGenerator.class);
   private static final String CONST_ROW_VARIABLE_NAME = "rows";
 
   public static String getUnwindCreateCypher(Target target) {
+    TargetType targetType = target.getType();
+    if (targetType != TargetType.edge && targetType != TargetType.node) {
+      throw new RuntimeException("Unhandled target type: " + targetType);
+    }
+
+    SaveMode saveMode = target.getSaveMode();
+    if (saveMode != SaveMode.merge && saveMode != SaveMode.append) {
+      throw new RuntimeException("Unhandled save mode: " + saveMode);
+    }
+
+    if (targetType == TargetType.edge) {
+      if (saveMode == SaveMode.merge) {
+        return unwindMergeRelationships(target);
+      }
+      return unwindCreateRelationships(target);
+    }
+
+    if (saveMode == SaveMode.merge) {
+      return unwindMergeNodes(target);
+    }
+    return unwindCreateNodes(target);
+  }
+
+  private static String unwindCreateNodes(Target target) {
     StringBuilder sb = new StringBuilder();
-    // Model node creation statement
-    //  "UNWIND $rows AS row CREATE(c:Customer { id : row.id, name: row.name, firstName:
-    // row.firstName })
+    sb.append("UNWIND $" + CONST_ROW_VARIABLE_NAME + " AS row ");
+    sb.append("CREATE (")
+        .append(
+            getLabelsPropertiesListCypherFragment(
+                "n",
+                false,
+                FragmentType.node,
+                Arrays.asList(RoleType.key, RoleType.property),
+                target))
+        .append(")");
+    return sb.toString();
+  }
 
-    /// RELATIONSHIP TYPE
-    if (target.getType() == TargetType.edge) {
+  private static String unwindMergeNodes(Target target) {
+    StringBuilder sb = new StringBuilder();
+    sb.append("UNWIND $" + CONST_ROW_VARIABLE_NAME + " AS row ");
+    // MERGE clause represents matching properties
+    // MERGE (charlie {name: 'Charlie Sheen', age: 10})  A new node with the name 'Charlie
+    // Sheen' will be created since not all properties matched the existing 'Charlie Sheen'
+    // node.
+    sb.append("MERGE (")
+        .append(
+            getLabelsPropertiesListCypherFragment(
+                "n", false, FragmentType.node, List.of(RoleType.key), target))
+        .append(")");
+    String nodePropertyMapStr =
+        getPropertiesListCypherFragment(
+            FragmentType.node, false, List.of(RoleType.property), target);
+    if (nodePropertyMapStr.length() > 0) {
+      sb.append(" SET n+=").append(nodePropertyMapStr);
+    }
+    return sb.toString();
+  }
 
-      // Verb
-      if (target.getSaveMode() == SaveMode.merge) { // merge
-        sb.append("UNWIND $" + CONST_ROW_VARIABLE_NAME + " AS row ");
-        // MERGE (variable1:Label1 {nodeProperties1})-[:REL_TYPE]->
-        // (variable2:Label2 {nodeProperties2})
-        // MATCH before MERGE
-        sb.append(" MATCH (")
-            .append(
-                getLabelsPropertiesListCypherFragment(
-                    "source", true, FragmentType.source, Arrays.asList(RoleType.key), target))
-            .append(")");
-        sb.append(" MATCH (")
-            .append(
-                getLabelsPropertiesListCypherFragment(
-                    "target", true, FragmentType.target, Arrays.asList(RoleType.key), target))
-            .append(")");
-        sb.append(" MERGE (source)");
-        sb.append(" -[")
-            .append(getRelationshipTypePropertiesListFragment("rel", false, target))
-            .append("]-> ");
-        sb.append("(target)");
-        // SET properties...
-      } else if (target.getSaveMode() == SaveMode.append) { // Fast, blind create
-        sb.append("UNWIND $" + CONST_ROW_VARIABLE_NAME + " AS row CREATE ");
-        sb.append("(")
-            .append(
-                getLabelsPropertiesListCypherFragment(
-                    "source",
-                    false,
-                    FragmentType.source,
-                    Arrays.asList(RoleType.key, RoleType.property),
-                    target))
-            .append(")");
-        sb.append(" -[")
-            .append(getRelationshipTypePropertiesListFragment("rel", false, target))
-            .append("]-> ");
-        sb.append("(")
-            .append(
-                getLabelsPropertiesListCypherFragment(
-                    "target",
-                    false,
-                    FragmentType.target,
-                    Arrays.asList(RoleType.key, RoleType.property),
-                    target))
-            .append(")");
-      } else {
-        LOG.error("Unhandled saveMode: " + target.getSaveMode());
-      }
+  private static String unwindCreateRelationships(Target target) {
+    StringBuilder sb = new StringBuilder();
+    sb.append("UNWIND $" + CONST_ROW_VARIABLE_NAME + " AS row CREATE ");
+    sb.append("(")
+        .append(
+            getLabelsPropertiesListCypherFragment(
+                "source",
+                false,
+                FragmentType.source,
+                Arrays.asList(RoleType.key, RoleType.property),
+                target))
+        .append(")");
+    sb.append(" -[")
+        .append(getRelationshipTypePropertiesListFragment("rel", false, target))
+        .append("]-> ");
+    sb.append("(")
+        .append(
+            getLabelsPropertiesListCypherFragment(
+                "target",
+                false,
+                FragmentType.target,
+                Arrays.asList(RoleType.key, RoleType.property),
+                target))
+        .append(")");
+    String relPropertyMap =
+        getPropertiesListCypherFragment(
+            FragmentType.rel, false, List.of(RoleType.property), target);
+    if (relPropertyMap.length() > 0) {
+      sb.append(" SET rel += ").append(relPropertyMap);
+    }
+    return sb.toString();
+  }
 
-      // NODE TYPE
-    } else if (target.getType() == TargetType.node) {
-
-      // Verb
-      if (target.getSaveMode() == SaveMode.merge) { // merge
-        sb.append("UNWIND $" + CONST_ROW_VARIABLE_NAME + " AS row ");
-        // MERGE clause represents matching properties
-        // MERGE (charlie {name: 'Charlie Sheen', age: 10})  A new node with the name 'Charlie
-        // Sheen' will be created since not all properties matched the existing 'Charlie Sheen'
-        // node.
-        sb.append("MERGE (")
-            .append(
-                getLabelsPropertiesListCypherFragment(
-                    "n", false, FragmentType.node, Arrays.asList(RoleType.key), target))
-            .append(")");
-        String nodePropertyMapStr =
-            getPropertiesListCypherFragment(
-                FragmentType.node, false, Arrays.asList(RoleType.property), target);
-        if (nodePropertyMapStr.length() > 0) {
-          sb.append(" SET n+=").append(nodePropertyMapStr);
-        }
-      } else if (target.getSaveMode() == SaveMode.append) { // fast create
-        sb.append("UNWIND $" + CONST_ROW_VARIABLE_NAME + " AS row ");
-        sb.append("CREATE (")
-            .append(
-                getLabelsPropertiesListCypherFragment(
-                    "n",
-                    false,
-                    FragmentType.node,
-                    Arrays.asList(RoleType.key, RoleType.property),
-                    target))
-            .append(")");
-      } else {
-        LOG.error("Unhandled saveMode: " + target.getSaveMode());
-      }
-    } else {
-      throw new RuntimeException("Unhandled target type: " + target.getType());
+  private static String unwindMergeRelationships(Target target) {
+    StringBuilder sb = new StringBuilder();
+    sb.append("UNWIND $" + CONST_ROW_VARIABLE_NAME + " AS row ");
+    // MERGE (variable1:Label1 {nodeProperties1})-[:REL_TYPE]->
+    // (variable2:Label2 {nodeProperties2})
+    // MATCH before MERGE
+    sb.append(String.format(" %s (", egdeNodeMatchMode(target.getEdgeNodesMatchMode())))
+        .append(
+            getLabelsPropertiesListCypherFragment(
+                "source", true, FragmentType.source, List.of(RoleType.key), target))
+        .append(")");
+    sb.append(String.format(" %s (", egdeNodeMatchMode(target.getEdgeNodesMatchMode())))
+        .append(
+            getLabelsPropertiesListCypherFragment(
+                "target", true, FragmentType.target, List.of(RoleType.key), target))
+        .append(")");
+    sb.append(" MERGE (source)");
+    sb.append("-[")
+        .append(getRelationshipTypePropertiesListFragment("rel", true, target))
+        .append("]->");
+    sb.append("(target)");
+    String relPropertyMap =
+        getPropertiesListCypherFragment(
+            FragmentType.rel, false, List.of(RoleType.property), target);
+    if (relPropertyMap.length() > 0) {
+      sb.append(" SET rel += ").append(relPropertyMap);
     }
     return sb.toString();
   }
@@ -201,7 +222,19 @@ public class CypherGenerator {
     return "";
   }
 
-  public static List<String> getNodeIndexAndConstraintsCypherStatements(
+  public static List<String> getIndexAndConstraintsCypherStatements(
+      TargetType type, Config config, Target target) {
+    switch (type) {
+      case node:
+        return getNodeIndexAndConstraintsCypherStatements(config, target);
+      case edge:
+        return getRelationshipIndexAndConstraintsCypherStatements(config, target);
+      default:
+        throw new IllegalArgumentException(String.format("unexpected target type: %s", type));
+    }
+  }
+
+  private static List<String> getNodeIndexAndConstraintsCypherStatements(
       Config config, Target target) {
 
     List<String> cyphers = new ArrayList<>();
@@ -214,7 +247,6 @@ public class CypherGenerator {
         ModelUtils.getIndexedProperties(config.getIndexAllProperties(), FragmentType.node, target);
     List<String> uniqueProperties = ModelUtils.getUniqueProperties(FragmentType.node, target);
     List<String> mandatoryProperties = ModelUtils.getRequiredProperties(FragmentType.node, target);
-    List<String> nodeKeyProperties = ModelUtils.getNodeKeyProperties(FragmentType.node, target);
 
     for (String uniqueProperty : uniqueProperties) {
       cyphers.add(
@@ -232,14 +264,7 @@ public class CypherGenerator {
               + ModelUtils.makeSpaceSafeValidNeo4jIdentifier(mandatoryProperty)
               + " IS NOT NULL");
     }
-    for (String nodeKeyProperty : nodeKeyProperties) {
-      cyphers.add(
-          "CREATE CONSTRAINT IF NOT EXISTS FOR (n:"
-              + StringUtils.join(ModelUtils.makeSpaceSafeValidNeo4jIdentifiers(labels), ":")
-              + ") REQUIRE n."
-              + ModelUtils.makeSpaceSafeValidNeo4jIdentifier(nodeKeyProperty)
-              + " IS NODE KEY");
-    }
+    cyphers.addAll(generateNodeKeyConstraints(FragmentType.node, target));
     // constraints must be created last
     for (String indexedProperty : indexedProperties) {
       cyphers.add(
@@ -253,19 +278,109 @@ public class CypherGenerator {
     return cyphers;
   }
 
+  // TODO: no-op if < 5.7 || not EE for some or all
+  private static List<String> getRelationshipIndexAndConstraintsCypherStatements(
+      Config config, Target target) {
+
+    List<String> cyphers = new ArrayList<>();
+    // Model node creation statement
+    //  "UNWIND $rows AS row CREATE(c:Customer { id : row.id, name: row.name, firstName:
+    // row.firstName })
+    // derive labels
+    String type = ModelUtils.getStaticType(target);
+    List<String> indexedProperties =
+        ModelUtils.getIndexedProperties(config.getIndexAllProperties(), FragmentType.rel, target);
+    List<String> uniqueProperties = ModelUtils.getUniqueProperties(FragmentType.rel, target);
+    List<String> mandatoryProperties = ModelUtils.getRequiredProperties(FragmentType.rel, target);
+    List<String> relKeyProperties = ModelUtils.getEntityKeyProperties(FragmentType.rel, target);
+
+    String escapedType = ModelUtils.makeSpaceSafeValidNeo4jIdentifier(type);
+    for (String uniqueProperty : uniqueProperties) {
+      cyphers.add(
+          "CREATE CONSTRAINT IF NOT EXISTS FOR ()-[r:"
+              + escapedType
+              + "]-() REQUIRE r."
+              + ModelUtils.makeSpaceSafeValidNeo4jIdentifier(uniqueProperty)
+              + " IS UNIQUE");
+    }
+    for (String mandatoryProperty : mandatoryProperties) {
+      cyphers.add(
+          "CREATE CONSTRAINT IF NOT EXISTS FOR ()-[r:"
+              + escapedType
+              + "]-() REQUIRE r."
+              + ModelUtils.makeSpaceSafeValidNeo4jIdentifier(mandatoryProperty)
+              + " IS NOT NULL");
+    }
+    for (String relKeyProperty : relKeyProperties) {
+      cyphers.add(
+          "CREATE CONSTRAINT IF NOT EXISTS FOR ()-[r:"
+              + escapedType
+              + "]-() REQUIRE r."
+              + ModelUtils.makeSpaceSafeValidNeo4jIdentifier(relKeyProperty)
+              + " IS RELATIONSHIP KEY");
+    }
+    for (String indexedProperty : indexedProperties) {
+      cyphers.add(
+          "CREATE INDEX IF NOT EXISTS FOR ()-[r:"
+              + escapedType
+              + "]-() ON (r."
+              + ModelUtils.makeSpaceSafeValidNeo4jIdentifier(indexedProperty)
+              + ")");
+    }
+
+    return cyphers;
+  }
+
+  public static List<String> getEdgeNodeConstraintsCypherStatements(Target target) {
+    List<String> sourceNodeKeyConstraints = generateNodeKeyConstraints(FragmentType.source, target);
+    List<String> targetNodeKeyConstraints = generateNodeKeyConstraints(FragmentType.target, target);
+    List<String> statements =
+        new ArrayList<>(sourceNodeKeyConstraints.size() + targetNodeKeyConstraints.size());
+    statements.addAll(sourceNodeKeyConstraints);
+    statements.addAll(targetNodeKeyConstraints);
+    return statements;
+  }
+
   public static String getRelationshipTypePropertiesListFragment(
       String prefix, boolean onlyIndexedProperties, Target target) {
     StringBuilder sb = new StringBuilder();
     List<String> relType =
         ModelUtils.getStaticOrDynamicRelationshipType(CONST_ROW_VARIABLE_NAME, target);
     sb.append(prefix).append(":").append(StringUtils.join(relType, ":"));
-    sb.append(" ")
-        .append(
-            getPropertiesListCypherFragment(
-                FragmentType.rel,
-                onlyIndexedProperties,
-                Arrays.asList(RoleType.key, RoleType.property),
-                target));
+    String properties =
+        getPropertiesListCypherFragment(
+            FragmentType.rel, onlyIndexedProperties, List.of(RoleType.key), target);
+    if (!properties.isEmpty()) {
+      sb.append(" ").append(properties);
+    }
     return sb.toString();
+  }
+
+  private static String egdeNodeMatchMode(EdgeNodesMatchMode mode) {
+    switch (mode) {
+      case match:
+        return "MATCH";
+      case merge:
+        return "MERGE";
+      default:
+        throw new IllegalArgumentException(String.format("Unknown edge node match mode %s", mode));
+    }
+  }
+
+  private static List<String> generateNodeKeyConstraints(FragmentType fragmentType, Target target) {
+    List<String> labels = ModelUtils.getStaticLabels(fragmentType, target);
+    List<String> nodeKeyProperties = ModelUtils.getEntityKeyProperties(fragmentType, target);
+    List<String> results = new ArrayList<>(nodeKeyProperties.size());
+    for (String label : labels) {
+      String escapedLabel = ModelUtils.makeSpaceSafeValidNeo4jIdentifier(label);
+      for (String nodeKeyProperty : nodeKeyProperties) {
+        String escapedProperty = ModelUtils.makeSpaceSafeValidNeo4jIdentifier(nodeKeyProperty);
+        results.add(
+            String.format(
+                "CREATE CONSTRAINT IF NOT EXISTS FOR (n:%s) REQUIRE n.%s IS NODE KEY",
+                escapedLabel, escapedProperty));
+      }
+    }
+    return results;
   }
 }
